force-app/main/default/objects/COMM_ProductVariations__c/COMM_ProductVariations__c.object-meta.xml
<CustomObject>
    <description>Represents a Variation of the Product</description>
    <label>Product Variation</label>
    <nameField>
        <displayFormat>VA-{0000}</displayFormat>
        <label>Variation Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Variations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>