force-app/main/default/objects/COMM_ProductVariations__c/fields/COMM_MasterProduct__c.field-meta.xml
<CustomField>
    <fullName>COMM_MasterProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Bundle Product that aggregates related Products</description>
    <label>Master Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Master Product must be Type=bundle</errorMessage>
        <filterItems>
            <field>Product2.COMM_ProductType__c</field>
            <operation>equals</operation>
            <value>bundle</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Variations</relationshipLabel>
    <relationshipName>ProductVariationsMaster</relationshipName>
    <type>Lookup</type>
</CustomField>