force-app/main/default/objects/COMM_ProductVariations__c/fields/COMM_NumberOfHours__c.field-meta.xml
<CustomField>
    <fullName>COMM_NumberOfHours__c</fullName>
    <description>Number of Hours the Related Product is reserved when bundle is bought</description>
    <label>Number of Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>