force-app/main/default/objects/COMM_ProductVariations__c/fields/COMM_Quantity__c.field-meta.xml
<CustomField>
    <fullName>COMM_Quantity__c</fullName>
    <description>Related product quantity</description>
    <label>Quantity</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>