force-app/main/default/objects/COMM_ProductVariations__c/fields/COMM_RelatedProduct__c.field-meta.xml
<CustomField>
    <fullName>COMM_RelatedProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product included in the bundle</description>
    <label>Related Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Related Product must be Type=single</errorMessage>
        <filterItems>
            <field>Product2.COMM_ProductType__c</field>
            <operation>equals</operation>
            <value>single</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Variations (Related Product)</relationshipLabel>
    <relationshipName>ProductVariationsRelated</relationshipName>
    <type>Lookup</type>
</CustomField>