force-app/main/default/objects/COMM_ProductVariations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>COMM_MasterProduct__c</columns>
    <columns>COMM_RelatedProduct__c</columns>
    <columns>COMM_Quantity__c</columns>
    <columns>COMM_NumberOfHours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>